@@ -4,9 +4,7 @@
 <use name=FWCore/MessageLogger>
 <use name=FWCore/ParameterSet>
 
-#<use name=Geometry/Records>
 <use name=Geometry/TrackerGeometryBuilder>
-
 
 <use name=AnalysisDataFormats/SiStripClusterInfo>
 <use name=AnalysisDataFormats/TrackInfo>
@@ -25,55 +23,51 @@
 <use name=CalibFormats/SiStripObjects>
 <use name=CalibTracker/Records>
 
-#<use name=CalibTracker/SiStripConnectivity>
-#<use name=CommonTools/SiStripZeroSuppression>
-
 <use name=FWCore/PluginManager>
 <use name=CondFormats/DataRecord>
 <use name=Geometry/Records>
-#<use name=SimDataFormats/HepMCProduct>
 
-#<use name=wtfRecoLocalTracker/SplitClustersProducer>
+<use name=wtfRecoLocalTracker/SplitClustersProducer>
+
+<flags EDM_PLUGIN=1>
 
 <export>
-<use name=boost>
-<use name=root>
-<use name=FWCore/Framework>
-<use name=FWCore/MessageLogger>
-<use name=FWCore/ParameterSet>
-
-<use name=Geometry/Records>
-<use name=Geometry/TrackerGeometryBuilder>
-
-
-<use name=AnalysisDataFormats/SiStripClusterInfo>
-<use name=AnalysisDataFormats/TrackInfo>
-
-<use name=DataFormats/Common>
-<use name=DataFormats/SiStripDigi>
-<use name=DataFormats/SiStripCluster>
-<use name=DataFormats/SiStripDetId>
-<use name=DataFormats/TrackReco>
-<use name=DataFormats/TrackerRecHit2D>
-<use name=SimDataFormats/TrackingHit>
-<use name=SimDataFormats/Track>
-<use name=SimDataFormats/TrackerDigiSimLink>
-<use name=SimTracker/TrackerHitAssociation>
-<use name=SimTracker/TrackAssociation>
-
-<use name=CalibFormats/SiStripObjects>
-<use name=CalibTracker/Records>
-
-<use name=CalibTracker/SiStripConnectivity>
-<use name=CommonTools/SiStripZeroSuppression>
-
-<use name=FWCore/PluginManager>
-<use name=CondFormats/DataRecord>
-<use name=Geometry/Records>
-
-#<use name=wtfRecoLocalTracker/SplitClustersProducer>
+  <use name=boost>
+  <use name=root>
+  <use name=FWCore/Framework>
+  <use name=FWCore/MessageLogger>
+  <use name=FWCore/ParameterSet>
+  
+  <use name=Geometry/Records>
+  <use name=Geometry/TrackerGeometryBuilder>
+  
+  <use name=AnalysisDataFormats/SiStripClusterInfo>
+  <use name=AnalysisDataFormats/TrackInfo>
+  
+  <use name=DataFormats/Common>
+  <use name=DataFormats/SiStripDigi>
+  <use name=DataFormats/SiStripCluster>
+  <use name=DataFormats/SiStripDetId>
+  <use name=DataFormats/TrackReco>
+  <use name=DataFormats/TrackerRecHit2D>
+  <use name=SimDataFormats/TrackingHit>
+  <use name=SimDataFormats/Track>
+  <use name=SimDataFormats/TrackerDigiSimLink>
+  <use name=SimTracker/TrackerHitAssociation>
+  <use name=SimTracker/TrackAssociation>
+  
+  <use name=CalibFormats/SiStripObjects>
+  <use name=CalibTracker/Records>
+  
+  <use name=CalibTracker/SiStripConnectivity>
+  <use name=CommonTools/SiStripZeroSuppression>
+  
+  <use name=FWCore/PluginManager>
+  <use name=CondFormats/DataRecord>
+  <use name=Geometry/Records>
+  
+  <use name=wtfRecoLocalTracker/SplitClustersProducer>
 
 </export>
-<flags EDM_PLUGIN=1>
 
 
