@@ -1,5 +1,14 @@
-21 Sept., 2009
+4 Oct 2009  wtford --
+ClusterAnalyzer:  Add inheritance from
+wtfRecoLocalTracker/SplitClustersAlgos to replace local copy of 
+leftStripCount().  Add a parameter to control the output root file
+name. 
+Buildfile:  Add <use name=wtfRecoLocalTracker/SplitClustersProducer> to
+point the builder to library needed for the addition above.
+SplitHitsAnalysis_cfg.py:  Point newTrajectoryBuilder to the split
+clusters 
 
+21 Sept 2009  wtford --
 The SplitHitsAnalysis job is leaking about 3MB per event.
 25 Sept., 2009
 The leaky module is the trackInfo.  I learn from e-mail from Chiara
